- Fix layout issue for narrow windows (fixes #12)

--- a/codeplay.css
+++ b/codeplay.css
@@ -1,7 +1,4 @@
 /* Layout */
-body {
-  padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-}
 
 .showoutline {
   border: 1px solid #aaa;
